# Synthesis-Bankr-Gateway

./: .env.example  README.md  agent.json  agent_log.json  pyproject.toml
agents/: bankr_router.py
docs/: architecture.mmd  audit.md  concepts.md  credentials.md  demo_video_script.md  live_readiness.md  security.md
script/: Deploy.s.sol
scripts/: plan_live_demo.py  render_submission.py  run_agent.py
src/: ComputeBudgetVault.sol
submissions/: synthesis.md
test/: ComputeBudgetVault.t.sol
tests/: test_project_context.py
